--- a/app/src/main/res/layout/news_content.xml
+++ b/app/src/main/res/layout/news_content.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 
     <fragment
-        android:id="@+id/news_title_fragment"
-        android:name="com.study.fragmentbestpractice.NewsTitleFragment"
+        android:id="@+id/news_content_fragment"
+        android:name="com.study.fragmentbestpractice.NewsContentFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
-
 </LinearLayout>
